--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -25,8 +25,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/user/register">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/user/login">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/user/register">Sign Up / Sign In</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +54,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">커뮤니티 공간</h2>
-                            <p></p>
+                            <p>서로 모르는 것이 있으면 질문해서 해답을 얻어가세요! </p>
                         </div>
                     </div>
                 </div>
@@ -71,7 +70,7 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">찐 맛집 소개</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <p>개발자들이 추천해주는 찐 맛집 소개</p>
                         </div>
                     </div>
                 </div>
@@ -86,8 +85,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">다이어리</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">수다도 떨어요</h2>
+                            <p>잡담을 나눌 수 있는 개발자 커뮤니티 공간 형성</p>
                         </div>
                     </div>
                 </div>
