--- a/community/src/main/resources/static/css/register.css
+++ b/community/src/main/resources/static/css/register.css
@@ -162,7 +162,7 @@ form .signin__btn:hover {
 }
 
 .google__btn,
-.github__btn {
+.kakao__btn {
     display: block;
     width: 90%;
     max-width: 680px;
@@ -176,35 +176,35 @@ form .signin__btn:hover {
     line-height: 40px;
 }
 .google__btn.google__btn,
-.github__btn.google__btn {
+.kakao__btn.google__btn {
     background: #5b90f0;
     color: white;
     box-shadow: 0 15px 30px rgba(91, 144, 240, 0.36);
     transition: 0.2s linear;
 }
 .google__btn.google__btn .fa,
-.github__btn.google__btn .fa {
+.kakao__btn.google__btn .fa {
     font-size: 20px;
     padding: 0 5px 0 0;
 }
 .google__btn.google__btn:hover,
-.github__btn.google__btn:hover {
+.kakao__btn.google__btn:hover {
     box-shadow: 0 0 0 rgba(91, 144, 240, 0);
 }
-.google__btn.github__btn,
-.github__btn.github__btn {
-    background: #25282d;
+.google__btn.kakao__btn,
+.kakao__btn.kakao__btn {
+    background: #ffd2b3;
     color: white;
     box-shadow: 0 15px 30px rgba(37, 40, 45, 0.36);
     transition: 0.2s linear;
 }
-.google__btn.github__btn .fa,
-.github__btn.github__btn .fa {
+.google__btn.kakao__btn .fa,
+.kakao__btn.kakao__btn .fa {
     font-size: 20px;
     padding: 0 5px 0 0;
 }
-.google__btn.github__btn:hover,
-.github__btn.github__btn:hover {
+.google__btn.kakao__btn:hover,
+.kakao__btn.kakao__btn:hover {
     box-shadow: 0 0 0 rgba(37, 40, 45, 0);
 }
 
