--- a/community/src/main/resources/templates/user/login.html
+++ b/community/src/main/resources/templates/user/login.html
@@ -32,7 +32,7 @@
   </ul>
 
   <!-- Form -->
-  <form id="Frm" onkeydown="if(event.keyCode==13) return false;">
+  <form id="Frm" onkeydown="if(event.keyCode==13) return false;" >
     <!-- email input -->
     <div class="first-input input__block first-input__block">
       <input type="email" placeholder="Email" class="input" id="USER_EMAIL" name = "USER_EMAIL"   />
@@ -62,6 +62,7 @@
 
       <!-- sign in button -->
       <button class="signin__btn" type="button" onclick="join()" >
+
         Sign in
       </button>
     </form>
@@ -121,10 +122,7 @@
           IT: [select.paraia_multi_select('get_items')] // [1,2,8]
         },
         success: function (data) {
-          if (data.code == 200){
-            window.location.href = "/";
-          }
-
+            console.log("sups");
         }, // success
 
         error: function (xhr, status) {
