--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -23,12 +23,13 @@
             <div class="card-block">
               <h5 class="card-title">
                 <p th:text="${board.TITLE}"></p>
+                <p th:text="${board.BOARD_ID}"></p>
               </h5>
               <p class="card-text">
                 Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
               </p>
               <p>
-                <a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+                <a class="btn btn-primary" th:href="@{/board/contentView?boardId={BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>
               </p>
             </div>
           </div>
