SQL문 수정 및 블로그 대표사진 분리

--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
