--- a/community/src/main/resources/templates/board/contentView.html
+++ b/community/src/main/resources/templates/board/contentView.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="UTF-8">
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<input type="button" value="htmlToPDF" id="btnPrint">
 <p th:text = "${content.BOARD_ID}"></p>
 <p th:text = "${content.USER_EMAIL}"></p>
 <p th:text = "${content.TITLE}"></p>
@@ -20,5 +22,34 @@
     const content_html = [[${content.CONTENT_HTML}]];
     temp.innerHTML = content_html;
     document.querySelector(".content_HTML").append(temp);
+
+    $("#btnPrint").on("click", function () {
+        const printWindow = window.open('', '', 'height=400,width=800');
+        printWindow.document.write('<html><head><title>Html to PDF</title>');
+        printWindow.document.write('</head><body >');
+        printWindow.document.write([[${content.CONTENT_HTML}]].toString());
+        printWindow.document.write('</body></html>');
+        printWindow.document.close();
+        //printWindow.print();
+    });
+
+    function htmlToPdf() {
+        $.ajax({
+            type: "POST",
+            url: "/board/htmlToPdf",
+            data: {
+                htmls : [[${content.CONTENT_HTML}]]
+            },
+            success: function (data) {
+             alert("변환되었습니다.")
+            },
+            error: function (request, status, error) {
+                alert(request + ", " + status + ", " + error);
+            },
+
+        });
+    }
 </script>
+
+
 </html>
