board - aws 정책 변경 및 이미지 url정의 블로그 전체 출력기능

--- a/community/src/main/resources/templates/board/contentView.html
+++ b/community/src/main/resources/templates/board/contentView.html
@@ -8,7 +8,7 @@
 <body>
 <input type="button" value="htmlToPDF" id="btnPrint">
 <p th:text = "${content.BOARD_ID}"></p>
-<p th:text = "${content.USER_EMAIL}"></p>
+<p th:text = "${content.USER_ID}"></p>
 <p th:text = "${content.TITLE}"></p>
 <div class = "content_HTML" id = "content_HTML">
 
@@ -30,7 +30,7 @@
         printWindow.document.write([[${content.CONTENT_HTML}]].toString());
         printWindow.document.write('</body></html>');
         printWindow.document.close();
-        //printWindow.print();
+        printWindow.print();
     });
 
     function htmlToPdf() {
