블로그 임시저장 구현중
블로그 임시저장 구현중

--- a/community/src/main/resources/templates/board/contentView.html
+++ b/community/src/main/resources/templates/board/contentView.html
@@ -10,6 +10,7 @@
 <p th:text = "${content.BOARD_ID}"></p>
 <p th:text = "${content.USER_ID}"></p>
 <p th:text = "${content.TITLE}"></p>
+<p th:text = "${content.TAG}"></p>
 <div class = "content_HTML" id = "content_HTML">
 
 </div>
