블로그 수정 및 대표사진
블로그 수정 기능 구현 및 대표사진 null 과 수정 시 대표사진은 변경 불가능

--- a/community/src/main/resources/templates/board/contentView.html
+++ b/community/src/main/resources/templates/board/contentView.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <input type="button" value="htmlToPDF" id="btnPrint">
+<a  th:href="@{/board/delete/{BOARD_ID} (BOARD_ID=${content.BOARD_ID})}">게시글 삭제</a>
 <p th:text = "${content.BOARD_ID}"></p>
 <p th:text = "${content.USER_ID}"></p>
 <p th:text = "${content.TITLE}"></p>
