--- a/community/src/main/resources/templates/board/view.html
+++ b/community/src/main/resources/templates/board/view.html
@@ -31,6 +31,7 @@
 <!--              </p>-->
               <p>
                 <a class="btn btn-primary" th:href="@{/board/contentView/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 보기</a>
+                <a class="btn btn-primary" th:href="@{/board/update/{BOARD_ID} (BOARD_ID=${board.BOARD_ID})}"> 수정</a>
               </p>
             </div>
           </div>
